style.css
/* ... */
.icon-circle {
    background-color: #f3e6e8;
    background-image: linear-gradient(315deg, #f3e6e8 0%, #d5d0e5 74%);
    width: 100px;
    height: 100px;
    display: inline-block;
}


/* center the browse heading and description text on the home page  */

.browse-icons h3,
.categories h3,
.nav-description {
    text-align: center;
}

.categories {
    height: 100vh;
}


/* hr for category  */

.cat-divider {
    margin-top: 50px;
    margin-bottom: 50px;
    border-color: #d3d3d3;
}


/* Category cards, Float four  paper-colums side by side */

.paper-cols {
    float: left;
    width: 25%;
    padding: 0 20px 30px;
}


/* Remove extra left and right margins, due to padding */

.row {
    margin: 0 -5px;
}


/* Clear floats after the  paper-colss */

.row:after {
    content: "";
    display: table;
    clear: both;
}


/* create space between the title and the hr line */

.category-cards {
    margin-top: 50px;
}

.paper h4 {
    padding-bottom: 90px;
}

.paper {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    padding: 16px;
    position: relative;
    background-color: #f1f1f1;
}

.paper,
.paper::before,
.paper::after {
    /* Add shadow to distinguish sheets from one another */
    box-shadow: 2px 1px 1px rgba(0, 0, 0, 0.15);
}

.paper::before,
.paper::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #eee;
}


/* Second sheet of paper */

.paper::before {
    left: 7px;
    top: 5px;
    z-index: -1;
}


/* Third sheet of paper */

.paper::after {
    left: 12px;
    top: 10px;
    z-index: -2;
}


/* side nav sub category  */


/* Style the tab */

.tab {
    float: left;
    text-decoration: underline;
    width: 20%;
    height: 40vh;
}


/* Style the buttons inside the tab */

.tab button {
    display: block;
    background-color: inherit;
    color: black;
    padding: 22px 0px;
    width: 100%;
    border: none;
    outline: none;
    text-align: left;
    cursor: pointer;
    transition: 0.3s;
    font-size: 17px;
}


/* Change background color of buttons on hover */

.tab button:hover {
    color: orange;
}


/* Create an active/current "tab button" class */

.tab button.active {
    color: var(--grape);
}


/* Style the tab content */

.subtabcontent {
    float: left;
    width: 80%;
    border-left: none;
    height: 40vh;
}


/* ***************LANDING PAGE /index*************************** */

.bgimg {
    min-height: 100%;
}

.index-body {
    background: #333132;
    padding: 50px;
    overflow: hidden;
    color: #FFF;
}

* {
    box-sizing: border-box;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
}

.text-wrap {
    margin: 0;
    position: relative;
    width: 100%;
}

.text-wrap svg {
    position: absolute;
    width: 100%;
    height: auto;
    font: bold 100px sans-serif;
    text-transform: uppercase;
}

.text-wrap svg .img-layer {
    fill: url(#p-img);
    font-size: medium;
}

.text-wrap svg .gradient-layer {
    fill: url(#g-overlay);
    font-size: medium;
}


/* text on the landing page */

.index-heading {
    margin-top: 20%;
    font-size: 70px;
    letter-spacing: -3px;
    line-height: 80px;
}

.index-text {
    font-weight: 300;
    letter-spacing: 1px;
}


/* the inputs for the mail list */

.email-input {
    width: 60%;
    border: none;
    border-bottom: 0.1px solid gray;
    padding: 3px 10px;
    outline: none;
    color: white;
    background: transparent;
}

input[class=email-submit] {
    background-color: transparent;
    border: 1px solid gray;
    color: white;
    padding: 10px 32px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
}

.browse-articles {
    display: inherit;
    text-decoration: underline;
    color: silver;
}


/* ***************************CATEGORY PAGE *************************** */

.category-header-sec {
    padding-bottom: 100px;
    color: black;
}

.category-heading {
    width: 400px;
    margin-top: 100px;
}

.sub-category {
    font-weight: 500;
    text-decoration: underline;
    text-decoration-color: orange;
}

.category-heading h1 {
    letter-spacing: -1px;
    font-size: 28px;
    font-weight: 300;
    text-align: left;
    font-weight: 300;
    padding-bottom: 14px;
}

.category-recommend {
    display: inherit;
    margin-top: 30%;
    text-align: center;
    color: orange;
    font-size: 17px;
    text-decoration: underline;
}

.follow-buttons {
    padding-bottom: 26%;
}

.category-subscribe {
    text-align: center;
    margin-top: 14%;
    padding-bottom: 10%;
}

.category-submit-btn {
    background-color: var(--grape);
    border: none;
    color: white;
    padding: 10px 6px;
    text-decoration: none;
}

.category-subscribe .email-input {
    width: 50%;
}


/* Style tab links */

.tablink {
    float: left;
    border: none;
    border-bottom: 1px solid var(--lightgray);
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    font-size: medium;
    width: 50%;
}

.tablink:hover {
    background-color: var(--lightgray);
}


/* Style the tab content (and add height:100% for full page content) */

.tabcontent {
    display: none;
    padding: 100px 20px;
    height: 100%;
}


/* styling for show iframe on hover */

.tiptext {
    color: #069;
    cursor: pointer;
}

.description {
    display: none;
    position: absolute;
    border: 1px solid #000;
    width: 400px;
    height: 400px;
}


/* hr for the links */

.article-container hr {
    border-color: var(--lightgray);
    width: 80%;
}


/* make the div for the links scrollable */

.scrollable {
    height: 600px;
    margin-top: 70px;
    overflow-y: auto;
}


/* incrasse padding for the ul list */

.article-container ul {
    padding-left: 50px;
}


/* change the color for the bullet */

.article-container ul li {
    color: var(--grape);
}


/* change the color for the text */

.article-container ul li a {
    color: black;
    font-weight: 300;
}
/* ... */

